k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app-backend
  template:
    metadata:
      namespace: chat-app
      name: chat-app-backend-pod
      labels:
        app: chat-app-backend
    spec:
      containers:
      - name: chat-app-backend-deployment
        image: arijitkumarpandab/chatapp-backend:latest
        ports:
        - containerPort: 5001
