k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app-frontend
  template:
    metadata:
      namespace: chat-app
      name: chat-app-frontend-pod
      labels:
        app: chat-app-frontend
    spec:
      containers:
      - name: chat-app-frontend-deployment
        image: arijitkumarpandab/chatapp-frontend:latest
        ports:
        - containerPort: 80
