k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-app
spec:
  type: NodePort
  selector:
    app: chat-app-backend
  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 30501  # Choose a port between 30000-32767
